--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,5 +3,16 @@
 
   {%- include head.html -%}
 
+  <body>
+
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </main>
+
+    {%- include footer.html -%}
+
+  </body>
 
 </html>
