--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,13 +5,8 @@
 
   <body>
 
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
+    {%- include header.html -%}
 
-    {%- include footer.html -%}
 
   </body>
 
