--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,11 @@
 
     {%- include header.html -%}
 
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </main>
 
   </body>
 
