--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
       </div>
 
       <div class="footer-col footer-col-2">
-        {%- include social.html -%}
+	{%- if site.github_username -%}<li><a href="https://github.com/{{ site.github_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use></svg> <span class="username">{{ site.github_username| escape }}</span></a></li>{%- endif -%}
       </div>
 
       <div class="footer-col footer-col-3">
