--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,6 +30,16 @@
 	    </a>
 	  </li>
 	  {%- endif -%}
+
+	  {%- if site.rss -%}
+	  <li>
+	    <a href="{{ 'feed.xml' | relative_url }}">
+	      <svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use>
+	      </svg>
+	      <span>{{ site.rss | escape }}</span>
+	    </a>
+	  </li>
+	  {%- endif -%}
 	</ul>
       </div>
 
