--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,6 +45,7 @@
 
       <div class="footer-col footer-col-3">
         <p>{{- site.description | escape -}}</p>
+        <p class="loaded"></p>
       </div>
     </div>
 
