--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,8 +44,8 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{- site.description | escape -}}</p>
-        <p id="loaded"></p>
+        <p>{{- site.description | escape -}}<br></br>
+        <span id="loaded"></span></p>
 <script>
 function loadedin() {
   window.performance = window.performance || window.mozPerformance || window.msPerformance || window.webkitPerformance || {};
