--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,8 +44,16 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{- site.description | escape -}}<br></br>
-        <span id="loaded"></span></p>
+	<ul class="social-media-list">
+          <li>{{- site.description | escape -}}</li>
+          <li id="loaded"></li>
+	</ul>
+      </div>
+    </div>
+
+  </div>
+
+</footer>
 <script>
 function loadedin() {
   window.performance = window.performance || window.mozPerformance || window.msPerformance || window.webkitPerformance || {};
@@ -64,9 +72,3 @@ window.onload = function(){
     oldonload();
 }
 </script>
-      </div>
-    </div>
-
-  </div>
-
-</footer>
