--- a/_layouts/meta.html
+++ b/_layouts/meta.html
@@ -1,19 +1,10 @@
 ---
 layout: default
 ---
-<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
-
   <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
   </div>
-  
-  <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">Site Environment</h1>
-    <p class="post-meta">
-    {% for item in site %}
-      <p>{{ item[0] }}</p>
-    {% endfor %}
-    </p>
-  </header>
-
-</article>
+  <h1 class="post-title p-name" itemprop="name headline">Site Environment</h1>
+    {%- for item in site -%}
+      <p>{{ item }}</p>
+    {%- endfor -%}
