--- a/_layouts/meta.html
+++ b/_layouts/meta.html
@@ -6,5 +6,5 @@ layout: default
   </div>
   <h1 class="post-title p-name" itemprop="name headline">Site Environment</h1>
     {%- for item in site -%}
-      <p>{{ item }}</p>
+      <p><span style="bold">{{ item }}:</span><p>{{ site[item] }}</p>
     {%- endfor -%}
