--- a/_layouts/meta.html
+++ b/_layouts/meta.html
@@ -5,7 +5,7 @@ layout: default
     {{ content }}
   </div>
   <h1 class="post-title p-name" itemprop="name headline">Site Environment</h1>
-    {%- assign items = "title,email,description,url,github_username,theme,markdown,highlighter,peach" | split: ',' -%}
+    {%- assign items = "title,email,description,url,github_username,theme,markdown,highlighter" | split: ',' -%}
     {%- for item in items -%}
       <div class="post-content e-content" itemprop="articleBody"><span style="font-weight:bold">{{ item }}: </span><span>{{ site[item] }}</span></div>
     {%- endfor -%}
@@ -15,14 +15,15 @@ layout: default
       <div class="post-content e-content" itemprop="articleBody"><span style="font-weight:bold">{{ item }}: </span><span>{{ site.github[item] }}<//span></div>
     {%- endfor -%}
   <h2 class="post-title p-name" itemprop="name headline">Contributors Environment</h1>
-    {%- for cont in site.github.contributors -%}
-     {%- for item in site.github.contributors[cont] -%}
+    {%- for item in site.github.contributors -%}
       <div class="post-content e-content" itemprop="articleBody"><span style="font-weight:bold">{{ item[0] }}: </span><span>{{ item[1] }}</span></div>
      {%- endfor -%}
     {%- endfor -%}
   <h2 class="post-title p-name" itemprop="name headline">Owner Environment</h1>
     {%- for item in site.github.owner -%}
+     {%- if item[1] != null and item[1] != "" -%}
       <div class="post-content e-content" itemprop="articleBody"><span style="font-weight:bold">{{ item[0] }}: </span><span>{{ item[1]] }}<//span></div>
+     {%- endif -%}
     {%- endfor -%}
   <h2 class="post-title p-name" itemprop="name headline">Versions Environment</h1>
     {%- for item in site.github.versions -%}
