--- a/_layouts/meta.html
+++ b/_layouts/meta.html
@@ -15,7 +15,9 @@ layout: default
       <div class="post-content e-content" itemprop="articleBody"><span style="font-weight:bold">{{ item }}: </span><span>{{ site.github[item] }}<//span></div>
     {%- endfor -%}
   <h2 class="post-title p-name" itemprop="name headline">Contributors Environment</h1>
-      <div class="post-content e-content" itemprop="articleBody"><span style="font-weight:bold">{{ site.github.contributors }}: </span><span>{{ item[1] }}</span></div>
+    {%- for item in site.github.contributors -%}
+      <div class="post-content e-content" itemprop="articleBody"><span style="font-weight:bold">{{ item[0] }}: </span><span>{{ item[1] }}</span></div>
+    {%- endfor -%}
   <h2 class="post-title p-name" itemprop="name headline">Owner Environment</h1>
     {%- for item in site.github.owner -%}
      {%- if item[1] != null and item[1] != "" -%}
